[workspace]
resolver = "1"  # lalrpop breaks with 2, did not investigate
members = [
    "api",
    "compiler",
#    "qcompiler",
    # TODO @mark: enable again
    "cli",
    "testing",
    "telc-cache",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://github.com/mverleg/tel"
license = "Apache-2.0"
publish = true

[patch.crates-io]
tel-api = { path = "./api" }
tel-cli = { path = "./cli" }
tel-lang = { path = "./compiler" }
