[package]
name = "steel-api"
description = "Steel (Statically-Typed Embedded Expression Language) is a scripting language that can be embedded in other applications."

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

#build = "build.rs"

[lib]
name = "steel_api"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
bincode = "2.0.0-rc.3"
log = "0.4.20"
#TODO @mark: clean up deps
