[package]
name = "tel-api"
description = "Tel (Typed Embedded Language) is a statically-typed language that can be embedded in other applications."

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

#build = "build.rs"

[lib]
name = "tel_api"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
bincode = "2.0.0-rc.3"
smartstring = { version = "1.0.1", features = ["serde"] }
log = "0.4.22"
xolir = "0.1.0"
