[package]
name = "async-lazy"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync", "time"] }
scc = "2.3.3"
append-only-vec = "0.1.7"

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }