[package]
name = "stale-cli"
description = "Stale (Statically-Typed Algebraic Language for Embedding) is a scripting language that can be embedded in other applications."
publish = true
default-run = "stale"

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

#build = "build.rs"

[[bin]]
name = "stale"
path = "src/main.rs"

[dependencies]
stale-api = "=0.1.0"
stale-lang = "=0.1.0"

clap = { version = "4.4.11", default-features = true, features = ["std", "derive", "unicode"] }
env_logger = "0.10.1"

[dev-dependencies]

#TODO @mark:
# [profile.release]
# opt-level = 3       # Optimize for size.
# lto = true          # Enable Link Time Optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*

