[package]
name = "tel-cli"
description = "Tel (Typed Embedded Language) is a statically-typed language that can be embedded in other applications."
publish = true
default-run = "tel"

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

#build = "build.rs"

[[bin]]
name = "tel"
path = "src/main.rs"

[dependencies]
tel-lang = "=0.1.0"

clap = { version = "4.5.49", default-features = true, features = ["std", "derive", "unicode"] }
env_logger = "0.10.2"

[dev-dependencies]

#TODO @mark:
# [profile.release]
# opt-level = 3       # Optimize for size.
# lto = true          # Enable Link Time Optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*

