[package]
name = "tel-common"
description = "Tel (Typed Embedded Language) is a statically-typed language that can be embedded in other applications."

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

#build = "build.rs"

[lib]
name = "tel_common"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
smartstring.workspace = true
log.workspace = true
