[package]
name = "tel-lang"
description = "Tel (Typed Embedded Language) is a statically-typed language that can be embedded in other applications."
publish = true

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

build = "build.rs"

[lib]
name = "telc"
path = "src/lib.rs"

[dependencies]
tel-common = "=0.1.0"
tel-hir = "=0.1.0"
tel-ast = "=0.1.0"
tel-parser = "=0.1.0"

regex = "1.10.6"
itertools = "0.11.0"
time = { version = "0.3.36", features = ["serde"] }
env_logger = "0.10.2"
sha2 = "0.10.8"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
serde = "1.0.208"
serde_json = "1.0.125"

dashmap = "5.5.3"
ahash = "0.8.11"
log = "0.4.22"
xolir = "0.1.0"

[build-dependencies]
lalrpop = { version = "0.20.2", features = ["lexer", "unicode"] }



#TODO @mark: clean up dependencies
