[package]
name = "tel-lang"
description = "Tel (Typed Embedded Language) is a statically-typed language that can be embedded in other applications."
publish = true

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

build = "build.rs"

[lib]
name = "telc"
path = "src/lib.rs"

[dependencies]
tel-common = "=0.1.0"
tel-hir = "=0.1.0"
tel-ast = "=0.1.0"
tel-parser = "=0.1.0"

regex = "1.12.2"
itertools = "0.14.0"
time = { version = "0.3.45", features = ["serde"] }
env_logger = "0.11.8"
sha2 = "0.10.9"
lalrpop-util = { version = "0.22.2", features = ["lexer", "unicode"] }
serde = "1.0.228"
serde_json = "1.0.149"

dashmap = "6.1.0"
ahash = "0.8.12"
log = "0.4.29"
xolir = "0.1.0"

[build-dependencies]
lalrpop = { version = "0.22.2", features = ["lexer", "unicode"] }



#TODO @mark: clean up dependencies
