[package]
name = "tel-lang"
description = "Tel (Typed Embedded Language) is a statically-typed language that can be embedded in other applications."
publish = true

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

build = "build.rs"

[lib]
name = "telc"
path = "src/lib.rs"

[dependencies]
tel-common.workspace = true
tel-hir.workspace = true
tel-ast.workspace = true
tel-parser.workspace = true

regex.workspace = true
itertools.workspace = true
time.workspace = true
env_logger.workspace = true
sha2.workspace = true
lalrpop-util.workspace = true
serde.workspace = true
serde_json.workspace = true

dashmap.workspace = true
ahash.workspace = true
log.workspace = true
xolir.workspace = true

[build-dependencies]
lalrpop.workspace = true



#TODO @mark: clean up dependencies
