[package]
name = "tel-hir"
description = "Tel (Typed Embedded Language) is a statically-typed language that can be embedded in other applications."

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

#build = "build.rs"

[lib]
name = "tel_hir"
path = "src/lib.rs"

[dependencies]
tel-common.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
log.workspace = true
