
[package]
name = "tel-lang-tmp"
#TODO @mark: change name ^
description = "Tel (Typed Embedded Language) is a statically-typed language that can be embedded in other applications."
publish = true

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

build = "build.rs"

[lib]
name = "qtelc"
path = "src/lib.rs"

[dependencies]


[build-dependencies]



#TODO @mark: clean up dependencies
