
[package]
name = "tel-lang-tmp"
#TODO @mark: change name ^
description = "Tel (Typed Embedded Language) is a statically-typed language that can be embedded in other applications."
publish = true

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "qtelc"
path = "src/lib.rs"

[dependencies]
either = "1.12"


[build-dependencies]



#TODO @mark: clean up dependencies
