
[package]
name = "tel-lang-tmp"
#TODO @mark: change name ^
description = "Tel (Typed Embedded Language) is a statically-typed language that can be embedded in other applications."
publish = true

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "qtelc"
path = "src/lib.rs"

[dependencies]
either = "1.12"
# tokio = "1.43.0"
serde = { version = "1.0.208", features = ["derive"] }

[build-dependencies]



#TODO @mark: clean up dependencies
