[package]
name = "sandbox"
edition.workspace = true
version.workspace = true

[dependencies]
dashmap.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[example]]
name = "dependency_graph_demo"
path = "examples/dependency_graph_demo.rs"
