[package]
name = "sandbox"
edition.workspace = true
version.workspace = true

[dependencies]
async-lazy = { path = "../async-lazy" }
dashmap.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
rand.workspace = true
tempfile = "3.15"

[[bench]]
name = "large_project"
harness = false
