
[package]
name = "telc-cache"
description = "Memory and filesystem cache used in the Tel compiler."
publish = true

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }

[build-dependencies]



