
[package]
name = "telc-cache"
description = "Memory and filesystem cache used in the Tel compiler."
publish = true

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "3.0.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }

[build-dependencies]



