
[package]
name = "telc-cache"
description = "Memory and filesystem cache used in the Tel compiler."
publish = true

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
log.workspace = true
serde.workspace = true
postcard.workspace = true
rusqlite.workspace = true

[build-dependencies]



