[package]
name = "tel-testing"
description = "Integration tests for Tel (Typed Embedded Language), a statically-typed language that can be embedded in other applications."
publish = true

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tel-testing"
path = "src/main.rs"

[dependencies]
tel-common = "=0.1.0"
tel-ast = "=0.1.0"
tel-hir = "=0.1.0"
tel-parser = "=0.1.0"
tel-lang = "=0.1.0"
rand = "0.9.2"
