[package]
name = "tel-testing"
description = "Integration tests for Tel (Typed Embedded Language), a statically-typed language that can be embedded in other applications."
publish = true

edition.workspace = true
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tel-testing"
path = "src/main.rs"

[dependencies]
tel-common.workspace = true
tel-ast.workspace = true
tel-hir.workspace = true
tel-parser.workspace = true
tel-lang.workspace = true
rand.workspace = true
